second commit to the repository

--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,9 @@ loopcamp.url:https://loopcamp.vercel.app
 loopcamp.practice:https://loopcamp.vercel.app
 dynamicLoading.username:tomsmith
 dynamicLoading.incorrectPassword:incorrect
+wikipedia:https://www.wikipedia.org
+smart.bear:http://secure.smartbearsoftware.com/samples/TestComplete12/WebOrders/
+smart.username:Tester
+smart.password:test
+product.url:https://demoblaze.com
+timeout:10
